ticket:1 view and tests are now using model. all tests are passing. data is loading from fixture.

--- a/apps/contacts/templates/contacts.html
+++ b/apps/contacts/templates/contacts.html
@@ -16,7 +16,7 @@
 	</div>
 
 	<div class="row contacts">
-		<div class="col-xs-6">Date of birth: {{ contact.date_on_birth }}</div>
+		<div class="col-xs-6">Date of birth: {{ contact.date_of_birth }}</div>
 		<div class="col-xs-6">Jabber: {{ contact.jabber_id }}</div>
 		<hr>
 	</div>
