ticket:3 requests view with hard-coded data passes tests. changed base and contacts template. added requests template.

--- a/apps/contacts/templates/contacts.html
+++ b/apps/contacts/templates/contacts.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Contacts - {% endblock %}
+{% block contacts_tab_class %} active {% endblock %}
 {% block content %}
 <br>
 	{% for contact in contacts %}
@@ -39,4 +40,7 @@
 		<hr>
 	</div>
 	{% endfor %}
+
+	<hr>
+	<p class="text"><a href="/requests">requests</a></p>
 {% endblock %}
