ticket:3 added tests for API endpoint which would return last 10 requests. installed rest_framework.

--- a/apps/requests/templates/requests.html
+++ b/apps/requests/templates/requests.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 {% block title %}Requests - {% endblock %}
+{% block extra_head %}<script src="{% static 'js/requests.js' %}"></script>{% endblock %}
 {% block requests_tab_class %} active {% endblock %}
 {% block content %}
 <table class="table">
