--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="{% static 'css/screen.css' %}" media="screen, projection"/>
 
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 
         {% block extra_head %}{% endblock extra_head %}
 
