ticket:3 added filtering by RequestEntries which id's are greater than passed. also added spme tests of filters. tests are passing.

--- a/apps/requests/templates/requests.html
+++ b/apps/requests/templates/requests.html
@@ -20,7 +20,7 @@
 		</td>
 	</tr>
 	{% for obj in objects %}
-	<tr class="row">
+	<tr class="row request"  id="{{ obj.id }}">
 		<td class="col-xs-1">
 			{{ obj.method }}
 		</td>
