ticket:1 deploy to new barista project

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     </head>
     <body id="{% block body_id %}{% endblock %}" class="{% block body_class %}{% endblock %}">
         <div class="container">
-            <h1>42CoffeeCups test task</h1>
+            <h1>42 Coffee Cups Test Assignment</h1>
             <ul class="nav nav-tabs">
                 <li role="presentation" class="{% block contacts_tab_class %}{% endblock %}"><a href="{% url 'contacts_list' %}">Contacts</a></li>
                 <li role="presentation" class="{% block requests_tab_class %}{% endblock %}"><a href="{% url 'requests_list' %}">Requests</a></li>
