--- a/apps/requests/templates/requests.html
+++ b/apps/requests/templates/requests.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load staticfiles %}
-{% block title %}Requests - {% endblock %}
+{% block title %}Requests{% endblock %}
 {% block extra_head %}<script src="{% static 'js/requests.js' %}"></script>{% endblock %}
 {% block requests_tab_class %} active {% endblock %}
 {% block content %}
@@ -19,6 +19,8 @@
 			Timestamp
 		</td>
 	</tr>
+</table>
+<table class="table requests">
 	{% for obj in objects %}
 	<tr class="row request"  id="{{ obj.id }}">
 		<td class="col-xs-1">
