ticket:1 other contacts and bio are now multiline

--- a/apps/contacts/templates/contacts.html
+++ b/apps/contacts/templates/contacts.html
@@ -35,8 +35,8 @@
 	</div>
 
 	<div class="row contacts">
-		<div class="col-xs-6">{{ contacts.bio }}</div>
-		<div class="col-xs-6">{{ contacts.other_contacts }}</div>
+		<div class="col-xs-6">{{ contacts.bio | linebreaks }}</div>
+		<div class="col-xs-6">{{ contacts.other_contacts | linebreaks }}</div>
 		<hr>
 	</div>
 	{% else %}
