--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,29 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
+        <!--
         <link rel="stylesheet" href="{% static 'css/screen.css' %}" media="screen, projection"/>
+        -->
+        <style type="text/css">
+            .container {
+                margin-left: 7%;
+                margin-right: 7%;
+                margin-top: 5%;
+            }
+
+            h1 {
+                text-align: center;
+            }
+
+            .contacts {
+                margin-bottom: 15px;
+            }
+
+            .new {
+                background-color: #F7F7F9;
+            }
+
+        </style>
 
         <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 
