ticket:3 refactoring and updates according to comments.

--- a/apps/requests/templates/requests.html
+++ b/apps/requests/templates/requests.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load staticfiles %}
+{% load static from staticfiles %}
 {% block title %}Requests{% endblock %}
 {% block extra_head %}
 <!--
@@ -17,9 +17,11 @@ $(document).ready(function() {
     var newestId = $('.request:first').attr('id');
     
     function updateRequests() {
-    	var url = "/requests_api/?pk=" + newestId.toString();
+		var url = "{% url 'requests_api' %}" + '?pk=' + newestId.toString();
     	$.get(url, function(data, status){
-    	newestId = data[0]['id'];
+    	if(data[0]){
+    		newestId = data[0]['id'];
+    	};
     	data.reverse().forEach(function(obj, i, data) {
     		if ($('tr.request').length == 10) {           
 					$('tr.request:last').remove();
