ticket:3 removed js and css from html

--- a/apps/requests/templates/requests.html
+++ b/apps/requests/templates/requests.html
@@ -2,87 +2,13 @@
 {% load static from staticfiles %}
 {% block title %}Requests{% endblock %}
 {% block extra_head %}
-<!--
+
 <script src="{% static 'js/requests.js' %}"></script>
--->
-<script type="text/javascript">
-String.prototype.capitalize = function() {
-    return this.charAt(0).toUpperCase() + this.slice(1);
-}
 
-$(document).ready(function() {
-    var defaultTitle = document.title;
-    var newRequestsCounter = 0;
-    // remember id of newest request
-    var newestId = $('.request:first').attr('id');
-    
-    function updateRequests() {
-		var url = "{% url 'requests_api' %}" + '?pk=' + newestId.toString();
-    	$.get(url, function(data, status){
-    	if(data[0]){
-    		newestId = data[0]['id'];
-    	};
-    	data.reverse().forEach(function(obj, i, data) {
-    		if ($('tr.request').length == 10) {           
-					$('tr.request:last').remove();
-			};
-    		// create new row
-    		var row = $('<tr/>', {          
-				'class': 'row request new',
-				'id': obj.id
-			});
-    		// add method col
-    		$('<td/>', {
-				'class': 'col-xs-1',
-				text: obj.method
-			}).appendTo(row);
-    		// add path col
-    		$('<td/>', {
-				'class': 'col-xs-7',
-				text: obj.absolute_path     
-			}).appendTo(row);
-    		// add is_ajax col
-    		$('<td/>', {
-				'class': 'col-xs-1',
-				text: obj.is_ajax.toString().capitalize()
-			}).appendTo(row);
-    		// add timestamp
-    		$('<td/>', {
-    			'class': 'col-xs-3',
-    			text: Date(obj.timestamp).toString()
-    		}).appendTo(row);
-    		// increment counter
-    		newRequestsCounter ++;
-    		document.title = '(' + newRequestsCounter.toString() + ') ' + defaultTitle;
-    		$('.header').after(row).fadeIn();
-    	});
-    });
-};
-    setInterval(function(){ 
-       updateRequests();
-	}, 1000);
-
-	function setAsViewed() {
-    	$('tr.request.new').removeClass('new');
-    	document.title = defaultTitle;
-    	newRequestsCounter = 0;
-    };
-
-    $(window).focus(function(){
-    	setTimeout(function(){
-    		setAsViewed();
-    	}, 500);
-    });
-
-    $(document).bind('mousemove keydown scroll', function(){
-    	setAsViewed();
-    });
-});
-
-</script>
 {% endblock %}
 {% block requests_tab_class %} active {% endblock %}
 {% block content %}
+<input type="hidden" id="api" value="{% url 'requests_api' %}">
 <table class="table">
 	<tr class="row header">
 		<td class="col-xs-1">
