ticket:5 added template for edit page, fixed some errors in tests

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -4,14 +4,14 @@
 	margin-top: 5%;
 }
 
-h1 {
-	text-align: center;
-}
-
 .contacts {
 	margin-bottom: 15px;
 }
 
 .new {
 	background-color: #F7F7F9;
+}
+
+.text {
+	font-size: 26px;
 }
