--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,14 @@
     </head>
     <body id="{% block body_id %}{% endblock %}" class="{% block body_class %}{% endblock %}">
         <div class="container">
-            <h1>42 Coffee Cups Test Assignment</h1>
+            <div class="row">
+                <div class="col-xs-6">
+                    <p class="text">42 Coffee Cups Test Assignment</p>
+                </div>
+                <div class="col-xs-3 col-xs-offset-3">
+                    <p class="text"><a href="#">Login</a></p>
+                </div>
+            </div>
             <ul class="nav nav-tabs">
                 <li role="presentation" class="{% block contacts_tab_class %}{% endblock %}"><a href="{% url 'contacts_list' %}">Contacts</a></li>
                 <li role="presentation" class="{% block requests_tab_class %}{% endblock %}"><a href="{% url 'requests_list' %}">Requests</a></li>
