--- a/apps/requests/templates/requests.html
+++ b/apps/requests/templates/requests.html
@@ -3,12 +3,14 @@
 {% block title %}Requests{% endblock %}
 {% block extra_head %}
 
-<script src="{% static 'js/requests.js' %}"></script>
+<script type="text/javascript">
+	var apiUrl = {% url 'requests_api' %};
+</script>
+<script src="{% static 'js/requests.js' %}" type="text/javascript"></script>
 
 {% endblock %}
 {% block requests_tab_class %} active {% endblock %}
 {% block content %}
-<input type="hidden" id="api" value="{% url 'requests_api' %}">
 <table class="table">
 	<tr class="row header">
 		<td class="col-xs-1">
