--- a/apps/contacts/templates/edit.html
+++ b/apps/contacts/templates/edit.html
@@ -1,39 +1,88 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 {% block title %}Edit{% endblock %}
 {% block contacts_tab_class %} active {% endblock %}
+{% block extra_head %} {{ form.media | safe }} 
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
+<script src="{% static 'js/initForm.js' %}"></script>
+{% endblock %}
 {% block content %}
 <br>
+{% if object %}
+<h2>{{ object.name }} {{ object.lastname }} - Edit</h2>
 
-	<h2>Name Lastname - Edit</h2>
-<form class="form-horizontal" action='{% url "contacts_edit" %}' method='POST'>
+<p class="text-danger">{{ form.non_field_errors }}</p>
+
+<div class="form-container">
+<form class="form-horizontal" action='{% url "contacts_edit" %}' method='POST' id="editForm">
+	{% csrf_token %}
+
 	<div class="row">
     	
-    	<label for="name" class="col-xs-1 control-label">Name</label>
+    	<label for="name" class="col-xs-1 control-label">{{ form.name.label }}</label>
     	<div class="col-xs-5">
-      		<input type="text" class="form-control" id="name">
+      		{{ form.name }}
     	</div>
 		
-    		
-		
-    	<label for="email" class="col-xs-1 control-label">Email</label>
+    	<label for="email" class="col-xs-1 control-label">{{ form.email.label }}</label>
     	<div class="col-xs-5">
-      		<input type="email" class="form-control" id="email">
+      		{{ form.email }}
     	</div>
-		<br>
 	</div>
 	
+	<div class="row">
+		<div class="col-xs-5 col-xs-offset-1">
+			<p class="text-danger">{{ form.name.errors.as_text }}</p>
+		</div>
+		<div class="col-xs-5 col-xs-offset-1">
+			<p class="text-danger">{{ form.email.errors.as_text }}</p>
+		</div>
+	</div>
+
 	<br>
 
 	<div class="row">
-    		
-    	<label for="lastname" class="col-xs-1 control-label">Lastname</label>
+    	
+    	<label for="{{ form.lastname.id_for_label }}" class="col-xs-1 control-label">{{ form.lastname.label }}</label>
     	<div class="col-xs-5">
-      		<input type="text" class="form-control" id="lastname">	
+      		{{ form.lastname }}	
 		</div>
     		
-    	<label for="jabber" class="col-xs-1 control-label">Jabber</label>
+    	<label for="{{ form.jabber_id.id_for_label }}" class="col-xs-1 control-label">{{ form.jabber_id.label }}</label>
     	<div class="col-xs-5">
-      		<input type="jabber" class="form-control" id="jabber">	
+      		{{ form.jabber_id }}	
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-xs-5 col-xs-offset-1">
+			<p class="text-danger">{{ form.lastname.errors.as_text }}</p>
+		</div>
+		<div class="col-xs-5 col-xs-offset-1">
+			<p class="text-danger">{{ form.jabber_id.errors.as_text }}</p>
+		</div>
+	</div>
+
+	<br>
+
+	<div class="row">
+		<label for="{{ form.date_of_birth.id_for_label }}" class="col-xs-1 control-label">{{ form.date_of_birth.label }}</label>
+    	<div class="col-xs-5">
+      		{{ form.date_of_birth }}	
+		</div>
+
+		<label for="{{ form.skype.label_for_id }}" class="col-xs-1 control-label">{{ form.skype.label }}</label>
+    	<div class="col-xs-5">
+      		{{ form.skype }}
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-xs-5 col-xs-offset-1">
+			<p class="text-danger">{{ form.date_of_bitrh.errors.as_text }}</p>
+		</div>
+		<div class="col-xs-5 col-xs-offset-1">
+			<p class="text-danger">{{ form.skype.errors.as_text }}</p>
 		</div>
 	</div>
 
@@ -52,24 +101,31 @@
 		<div class="col-xs-6"><img src="http://ww1.prweb.com/prfiles/2014/04/10/11752526/gI_134971_best-image-web-hosting.png"></div>
 
 		<div class="col-xs-6">
-			<label for="bio" class="control-label">Bio</label>
-			<textarea class="form-control" id="bio" rows="4"></textarea>
+			<label for="{{ form.bio.label_for_id }}" class="control-label">{{ form.bio.label }}</label>
+			{{ form.bio }}
+			<p class="text-danger">{{ form.bio.errors.as_text }}</p>
 
-			<label for="other_contacts" class="control-label">Other contacts</label>
-			<textarea class="form-control" id="other_contacts" rows="4"></textarea>
+			<label for="{{ form.other_contacts.label_for_id }}" class="control-label">{{ form.other_contacts.label }}</label>
+			{{ form.other_contacts }}
+			<p class="text-danger">{{ form.other_contacts.errors.as_text }}</p>
 		</div>
 	</div>
+
+	<br>
 
 	<div class="row">
 		<div class="col-xs-1">
 			<button type="submit" class="btn btn-default">Submit</button>
 		</div>
 		<div class="col-xs-1">
-			<a href="{% url 'contacts_list' %}">Cansel</a>
+			<a href="{% url 'contacts_list' %}">Cancel</a>
 		</div>
 	</div>
 </form>
-
+</div>
+{% else %}
+<h2>Can't edit. No contacts exist.</h2>
+{% endif %}
 <hr>
 <a href="{% url 'requests_list' %}">requests</a>
 {% endblock %}
