ticket:5 added image to Contacts model. Image scales, old image deletes when the new one is uploaded. Done some refactoring: fixed some issues with datepicker.

--- a/apps/contacts/templates/contacts.html
+++ b/apps/contacts/templates/contacts.html
@@ -26,7 +26,13 @@
 	</div>	
 
 	<div class="row contacts">
-		<div class="col-xs-6"><img src="http://ww1.prweb.com/prfiles/2014/04/10/11752526/gI_134971_best-image-web-hosting.png"></div>
+		<div class="col-xs-6">
+		{% if contacts.image %}
+		<img src="{{ MEDIA_URL }}{{ contacts.image }}">
+		{% else %}
+		<img src="http://ww1.prweb.com/prfiles/2014/04/10/11752526/gI_134971_best-image-web-hosting.png"></div>
+		{% endif %}
+		</div>
 		<div class="col-xs-6">
 			Bio:
 			{{ contacts.other_contacts | linebreaks }}
