--- a/apps/contacts/templates/edit.html
+++ b/apps/contacts/templates/edit.html
@@ -70,7 +70,7 @@
 	<div class="row">
 		<label for="{{ form.date_of_birth.id_for_label }}" class="col-xs-1 control-label">{{ form.date_of_birth.label }}</label>
     	<div class="col-xs-5">
-      		{{ form.date_of_birth }}	
+      		{{ form.date_of_birth }}
 		</div>
 
 		<label for="{{ form.skype.label_for_id }}" class="col-xs-1 control-label">{{ form.skype.label }}</label>
@@ -93,15 +93,26 @@
 	<div class="row">	
     	<label for="photo" class="col-xs-1 control-label">Photo</label>
     	<div class="col-xs-5">
-      		<input type="file" id="photo">
+      		{{ form.image }}
     	</div>
+	</div>
+
+	<div class="row">
+		<div class="col-xs-6">
+			<p class="text-danger">{{ form.image.errors.as_text }}</p>
+		</div>
 	</div>
 
 	<br>
 
 	<div class="row">
-		<div class="col-xs-6"><img src="http://ww1.prweb.com/prfiles/2014/04/10/11752526/gI_134971_best-image-web-hosting.png"></div>
-
+		<div class="col-xs-6">
+		{% if object.image %}
+		<img src="{{ object.image.url }}">
+		{% else %}
+		<img src="http://ww1.prweb.com/prfiles/2014/04/10/11752526/gI_134971_best-image-web-hosting.png">
+		{% endif %}
+		</div>
 		<div class="col-xs-6">
 			<label for="{{ form.bio.label_for_id }}" class="control-label">{{ form.bio.label }}</label>
 			{{ form.bio }}
