--- a/apps/contacts/templates/login.html
+++ b/apps/contacts/templates/login.html
@@ -19,6 +19,12 @@
     {% endif %}
 {% endif %}
 
+{% if user.is_authenticated %}
+
+<p class="text">You are already logged in, {{ user.username }}.</p>
+
+{% else %}
+
 <form class="form-horizontal" method="post" action="{% url 'login' %}">
 {% csrf_token %}
 {{ form.as_p }}
@@ -26,4 +32,6 @@
 <button type="submit" class="btn btn-default">Login</button>
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
+
+{% endif %}
 {% endblock %}
