--- a/apps/contacts/templates/contacts.html
+++ b/apps/contacts/templates/contacts.html
@@ -4,7 +4,14 @@
 {% block content %}
 <br>
     {% if contacts %}
-	<h2>{{ contacts.name }} {{ contacts.lastname }}</h2>
+    <div class="row">
+		<div class="col-xs-6">
+			<h2>{{ contacts.name }} {{ contacts.lastname }}</h2>
+		</div>
+		<div class="col-xs-1 col-xs-offset-4">
+			<a href="">Edit(admin)</a>
+		</div>
+	</div>
 	<div class="row contacts">
 		<div class="col-xs-6">Name: {{ contacts.name }}</div>
 		<div class="col-xs-6">Contacts</div>
