--- a/apps/contacts/templates/contacts.html
+++ b/apps/contacts/templates/contacts.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load link %}
 {% block title %}Contacts - {% endblock %}
 {% block contacts_tab_class %} active {% endblock %}
 {% block content %}
@@ -9,7 +10,7 @@
 			<h2>{{ contacts.name }} {{ contacts.lastname }}</h2>
 		</div>
 		<div class="col-xs-1 col-xs-offset-4">
-			<a href="">Edit(admin)</a>
+			<a href="{% edit_link contacts %}">Edit(admin)</a>
 		</div>
 	</div>
 	<div class="row contacts">
