--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
             </ul>
         {% if messages %}
             {% for message in messages %}
-                <p class="text-{{ message.tag }}">{{ message }}</p>
+                <p class="message text-{{ message.tag }}">{{ message }}</p>
             {% endfor %}
         {% endif %}
         {% block content %}{% endblock content %}
