--- a/apps/contacts/templates/edit.html
+++ b/apps/contacts/templates/edit.html
@@ -81,7 +81,7 @@
 
 	<div class="row">
 		<div class="col-xs-5 col-xs-offset-1">
-			<p class="errors text-danger">{{ form.date_of_bitrh.errors.as_text }}</p>
+			<p class="errors text-danger">{{ form.date_of_birth.errors.as_text }}</p>
 		</div>
 		<div class="col-xs-5 col-xs-offset-1">
 			<p class="errors text-danger">{{ form.skype_login.errors.as_text }}</p>
