ticket:13 updated template and tests.

--- a/apps/requests/templates/requests.html
+++ b/apps/requests/templates/requests.html
@@ -16,7 +16,7 @@
 		<td class="col-xs-1">
 			Method
 		</td>
-		<td class="col-xs-7">
+		<td class="col-xs-6">
 			Path
 		</td>
 		<td class="col-xs-1">
@@ -24,6 +24,9 @@
 		</td>
 		<td class="col-xs-3">
 			Timestamp
+		</td>
+		<td class="col-xs-1">
+			Priority
 		</td>
 	</tr>
 
@@ -40,6 +43,9 @@
 		</td>
 		<td class="col-xs-3">
 			{{ obj.timestamp }}
+		</td>
+		<td class="col-xs-1">
+			{{ obj.priority }}
 		</td>
 	</tr>
 	{% endfor %}
