ticket:1 first() instead last(), deleted navbar.

--- a/apps/contacts/templates/contacts.html
+++ b/apps/contacts/templates/contacts.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% load link %}
 {% block title %}Contacts - {% endblock %}
-{% block contacts_tab_class %} active {% endblock %}
 {% block content %}
 <br>
     {% if contacts %}
@@ -38,7 +37,7 @@
 		{% if contacts.image %}
 		<img src="{{ MEDIA_URL }}{{ contacts.image }}">
 		{% else %}
-		<img src="http://ww1.prweb.com/prfiles/2014/04/10/11752526/gI_134971_best-image-web-hosting.png"></div>
+		<img src="http://www.sellingtosmallbusinesses.com/wp-content/uploads/2009/02/small-business-averages.jpg"></div>
 		{% endif %}
 		</div>
 		<div class="col-xs-6">
