--- a/apps/contacts/templates/contacts.html
+++ b/apps/contacts/templates/contacts.html
@@ -8,8 +8,8 @@
 		<div class="col-xs-6">
 			<h2>{{ contacts.name }} {{ contacts.lastname }}</h2>
 		</div>
-		<div class="col-xs-1 col-xs-offset-4">
-			<a href="{% edit_link contacts %}">Edit(admin)</a>
+		<div class="col-xs-2 col-xs-offset-3">
+			<p><a href="{% url 'contacts_edit' %}">Edit</a> <a href="{% edit_link contacts %}">(admin)</a></p>
 		</div>
 	</div>
 	<div class="row contacts">
