--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-6">
-                    <p class="text">42 Coffee Cups Test Assignment</p>
+                    <p class="text"><a href="{% url 'contacts_list' %}">42 Coffee Cups Test Assignment</a></p>
                 </div>
                 <div class="col-xs-3 col-xs-offset-3">
                     {% if user.is_anonymous %}
