--- a/apps/contacts/templates/contacts.html
+++ b/apps/contacts/templates/contacts.html
@@ -37,7 +37,7 @@
 		{% if contacts.image %}
 		<img src="{{ MEDIA_URL }}{{ contacts.image }}">
 		{% else %}
-		<img src="http://www.sellingtosmallbusinesses.com/wp-content/uploads/2009/02/small-business-averages.jpg"></div>
+		<img src="http://ww1.prweb.com/prfiles/2014/04/10/11752526/gI_134971_best-image-web-hosting.png"></div>
 		{% endif %}
 		</div>
 		<div class="col-xs-6">
